Updated bootstrap and fixed layout issues with codemirror.

--- a/resources/assets/sass/codemirror/_codemirror.scss
+++ b/resources/assets/sass/codemirror/_codemirror.scss
@@ -3,14 +3,16 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  height: 300px;
+  height: 600px;
   color: black;
 }
 
 /* PADDING */
 
 .CodeMirror-lines {
-  padding: 4px 0; /* Vertical padding around content */
+  cursor: text;
+  min-height: 1px; /* prevents collapsing before first draw */
+  padding: 8px 0; /* Vertical padding around content */
 }
 .CodeMirror pre {
   padding: 0 4px; /* Horizontal padding of content */
@@ -224,10 +226,6 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   user-select: none;
 }
 
-.CodeMirror-lines {
-  cursor: text;
-  min-height: 1px; /* prevents collapsing before first draw */
-}
 .CodeMirror pre {
   /* Reset some styles that the rest of the page might have set */
   -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0;
